spacing fixes and new publications links

--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,13 @@ hr {
 .fullScreen {
     min-height: 100vh;
 }
+
+a:link {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    text-decoration: none;
+    color: blue;
+}
